fix wrapping tags in header

--- a/src/css/header/header-mobile.scss
+++ b/src/css/header/header-mobile.scss
@@ -1,12 +1,10 @@
 
-.header {
+.header-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 13px 0;
 }
-
-// .logo {};
 
 .btn-list {
     display: flex;
